OV-COMPONENTS: upgrade chromedriver to 136.0.2 and selenium-webdriver to 4.32.0

--- a/openvidu-components-angular/package.json
+++ b/openvidu-components-angular/package.json
@@ -28,7 +28,7 @@
     "@types/node": "20.12.14",
     "@types/selenium-webdriver": "4.1.16",
     "@types/ws": "^8.5.12",
-    "chromedriver": "132.0.0",
+    "chromedriver": "136.0.2",
     "concat": "^1.0.3",
     "cross-env": "^7.0.3",
     "eslint-config-prettier": "^9.1.0",
@@ -51,7 +51,7 @@
     "ng-packagr": "19.2.2",
     "npm-watch": "^0.13.0",
     "prettier": "3.3.3",
-    "selenium-webdriver": "4.25.0",
+    "selenium-webdriver": "4.32.0",
     "ts-node": "10.9.2",
     "tslint": "6.1.3",
     "typescript": "5.8.3",
@@ -86,11 +86,12 @@
     "lib:pack": "cd ./dist/openvidu-components-angular && npm pack",
     "lib:copy": "cp dist/openvidu-components-angular/openvidu-components-angular-*.tgz ../../openvidu-call/frontend",
     "lib:test": "ng test openvidu-components-angular --no-watch --code-coverage",
+    "e2e:lib-directives": "tsc --project ./e2e && npx jasmine --fail-fast ./e2e/dist/api-directives.test.js",
+
     "e2e:nested-all": "tsc --project ./e2e && npx jasmine --fail-fast  ./e2e/dist/nested-components/*.test.js",
     "e2e:nested-events": "tsc --project ./e2e && npx jasmine --fail-fast ./e2e/dist/nested-components/events.test.js",
     "e2e:nested-directives": "tsc --project ./e2e && npx jasmine --fail-fast  ./e2e/dist/nested-components/directives.test.js",
     "e2e:webcomponent-all": "tsc --project ./e2e && npx jasmine --fail-fast  ./e2e/dist/webcomponent-e2e/**/*.test.js",
-    "e2e:webcomponent-directives": "tsc --project ./e2e && npx jasmine --fail-fast  ./e2e/dist/webcomponent-e2e/api-directives.test.js",
     "e2e:webcomponent-captions": "tsc --project ./e2e && npx jasmine --fail-fast  ./e2e/dist/webcomponent-e2e/captions.test.js",
     "e2e:webcomponent-chat": "tsc --project ./e2e && npx jasmine --fail-fast  ./e2e/dist/webcomponent-e2e/chat.test.js",
     "e2e:webcomponent-events": "tsc --project ./e2e && npx jasmine --fail-fast  ./e2e/dist/webcomponent-e2e/events.test.js",
