--- a/.github/workflows/openvidu-components-angular-tests.yml
+++ b/.github/workflows/openvidu-components-angular-tests.yml
@@ -45,7 +45,7 @@ jobs:
           https://api.github.com/repos/OpenVidu/openvidu-call/dispatches \
           -d '{"event_type":"openvidu-components-angular","client_payload":{"commit-message":"'"$COMMIT_MESSAGE"'","commit-ref":"'"$COMMIT_URL"'", "branch-name":"'"$BRANCH_NAME"'"}}'
 
-  nested_components_e2e_events:
+  nested_events:
     needs: test_setup
     name: Nested events
     runs-on: ubuntu-latest
@@ -88,34 +88,9 @@ jobs:
         if: always()
         uses: ./.github/actions/cleanup
 
-  unit_tests:
-    name: Unit Tests
-    runs-on: ubuntu-latest
+  nested_structural_directives:
     needs: test_setup
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-        with:
-          ref: ${{ inputs.commit_sha || github.sha }}
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-      - name: Install wait-on package
-        run: npm install -g wait-on
-      - name: Install Dependencies
-        run: |
-          cd openvidu-components-angular
-          npm install
-      - name: Run Unit Tests
-        run: npm run lib:test --prefix openvidu-components-angular
-      - name: Cleanup
-        if: always()
-        uses: ./.github/actions/cleanup
-
-  nested_components_e2e_directives:
-    needs: test_setup
-    name: Nested directives
+    name: Nested Structural Directives
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
@@ -138,10 +113,68 @@ jobs:
         uses: ./.github/actions/setup-openvidu-call-backend
       - name: Build and Serve openvidu-components-angular Testapp
         uses: ./.github/actions/build-and-serve-components-testapp
-      - name: Run nested components E2E directives tests
+      - name: Run nested structural directives tests
         env:
           LAUNCH_MODE: CI
-        run: npm run e2e:nested-directives --prefix openvidu-components-angular
+        run: npm run e2e:nested-structural-directives --prefix openvidu-components-angular
+      - name: Cleanup
+        if: always()
+        uses: ./.github/actions/cleanup
+
+  nested_attribute_directives:
+    needs: test_setup
+    name: Nested Attribute Directives
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ inputs.commit_sha || github.sha }}
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+      - name: Install wait-on package
+        run: npm install -g wait-on
+      # - name: Run Browserless Chrome
+      #   run: docker run -d -p 3000:3000 --network host browserless/chrome:1.57-chrome-stable
+      - name: Run Chrome
+        run:  docker run --network=host -d -p 4444:4444 selenium/standalone-chrome:127.0
+      - name: Run openvidu-local-deployment
+        uses: ./.github/actions/setup-local-deployment
+      - name: Setup OpenVidu Call Backend
+        uses: ./.github/actions/setup-openvidu-call-backend
+      - name: Build and Serve openvidu-components-angular Testapp
+        uses: ./.github/actions/build-and-serve-components-testapp
+      - name: Run nested attribute directives tests
+        env:
+          LAUNCH_MODE: CI
+        run: npm run e2e:nested-attribute-directives --prefix openvidu-components-angular
+      - name: Cleanup
+        if: always()
+        uses: ./.github/actions/cleanup
+
+  unit_tests:
+    name: Unit Tests
+    runs-on: ubuntu-latest
+    needs: test_setup
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ inputs.commit_sha || github.sha }}
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+      - name: Install wait-on package
+        run: npm install -g wait-on
+      - name: Install Dependencies
+        run: |
+          cd openvidu-components-angular
+          npm install
+      - name: Run Unit Tests
+        run: npm run lib:test --prefix openvidu-components-angular
       - name: Cleanup
         if: always()
         uses: ./.github/actions/cleanup
