--- a/.github/workflows/openvidu-components-angular-tests.yml
+++ b/.github/workflows/openvidu-components-angular-tests.yml
@@ -204,7 +204,7 @@ jobs:
         uses: ./.github/actions/setup-openvidu-call-backend
       - name: Build and Serve openvidu-components-angular Testapp
         uses: ./.github/actions/build-and-serve-components-testapp
-      - name: Run Webcomponent E2E
+      - name: Run Tests
         env:
           LAUNCH_MODE: CI
         run: npm run e2e:lib-directives --prefix openvidu-components-angular
@@ -212,9 +212,9 @@ jobs:
         if: always()
         uses: ./.github/actions/cleanup
 
-  webcomponent_e2e_chat:
+  e2e_chat:
     needs: test_setup
-    name: Webcomponent chat
+    name: Chat E2E
     if: false
     runs-on: ubuntu-latest
     steps:
@@ -236,26 +236,12 @@ jobs:
         uses: ./.github/actions/setup-local-deployment
       - name: Setup OpenVidu Call Backend
         uses: ./.github/actions/setup-openvidu-call-backend
-      - name: Install dependencies
-        run: |
-          cd openvidu-components-angular
-          npm install
-      - name: Build openvidu-angular
-        run: npm run lib:build --prefix openvidu-components-angular
-      - name: Build openvidu-webcomponent
-        run: npm run webcomponent:testing-build --prefix openvidu-components-angular
-      - name: Serve Webcomponent Testapp
-        run: npm run webcomponent:serve-testapp --prefix openvidu-components-angular &
-      - name: Wait for openvidu-components-angular Testapp
-        run: |
-            until curl -s -f -o /dev/null http://localhost:8080; do
-              echo "Waiting for openvidu-components-angular Testapp to be ready..."
-              sleep 5
-            done
-      - name: Run Webcomponent E2E
+      - name: Build and Serve openvidu-components-angular Testapp
+        uses: ./.github/actions/build-and-serve-components-testapp
+      - name: Run Tests
         env:
           LAUNCH_MODE: CI
-        run: npm run e2e:webcomponent-chat --prefix openvidu-components-angular
+        run: npm run e2e:lib-chat --prefix openvidu-components-angular
       - name: Cleanup
         if: always()
         uses: ./.github/actions/cleanup
