--- a/.github/workflows/openvidu-components-angular-tests.yml
+++ b/.github/workflows/openvidu-components-angular-tests.yml
@@ -154,31 +154,6 @@ jobs:
         if: always()
         uses: ./.github/actions/cleanup
 
-  unit_tests:
-    name: Unit Tests
-    runs-on: ubuntu-latest
-    needs: test_setup
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-        with:
-          ref: ${{ inputs.commit_sha || github.sha }}
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-      - name: Install wait-on package
-        run: npm install -g wait-on
-      - name: Install Dependencies
-        run: |
-          cd openvidu-components-angular
-          npm install
-      - name: Run Unit Tests
-        run: npm run lib:test --prefix openvidu-components-angular
-      - name: Cleanup
-        if: always()
-        uses: ./.github/actions/cleanup
-
   e2e_directives:
     needs: test_setup
     name: API Directives Tests
@@ -278,10 +253,9 @@ jobs:
         if: always()
         uses: ./.github/actions/cleanup
 
-  webcomponent_e2e_media_devices:
+  e2e_media_devices:
     needs: test_setup
-    name: Webcomponent media devices
-    if: false
+    name: Mmedia devices E2E
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
@@ -302,26 +276,12 @@ jobs:
         uses: ./.github/actions/setup-local-deployment
       - name: Setup OpenVidu Call Backend
         uses: ./.github/actions/setup-openvidu-call-backend
-      - name: Install dependencies
-        run: |
-          cd openvidu-components-angular
-          npm install
-      - name: Build openvidu-angular
-        run: npm run lib:build --prefix openvidu-components-angular
-      - name: Build openvidu-webcomponent
-        run: npm run webcomponent:testing-build --prefix openvidu-components-angular
-      - name: Serve Webcomponent Testapp
-        run: npm run webcomponent:serve-testapp --prefix openvidu-components-angular &
-      - name: Wait for openvidu-components-angular Testapp
-        run: |
-            until curl -s -f -o /dev/null http://localhost:8080; do
-              echo "Waiting for openvidu-components-angular Testapp to be ready..."
-              sleep 5
-            done
+      - name: Build and Serve openvidu-components-angular Testapp
+        uses: ./.github/actions/build-and-serve-components-testapp
       - name: Run Webcomponent E2E
         env:
           LAUNCH_MODE: CI
-        run: npm run e2e:webcomponent-media-devices --prefix openvidu-components-angular
+        run: npm run e2e:lib-media-devices --prefix openvidu-components-angular
       - name: Cleanup
         if: always()
         uses: ./.github/actions/cleanup
