ov-components: remove OpenviduWebComponent and related files

--- a/openvidu-components-angular/projects/openvidu-components-angular/doc/tsconfig.doc.json
+++ b/openvidu-components-angular/projects/openvidu-components-angular/doc/tsconfig.doc.json
@@ -5,8 +5,7 @@
 		"../src/lib/directives/**/*.ts",
 		"../src/lib/services/**/*.ts",
 		"../src/lib/models/**/*.ts",
-		"../src/lib/pipes/**/*.ts",
-		// "../../../src/app/openvidu-webcomponent/**/*.ts",
+		"../src/lib/pipes/**/*.ts"
 	],
 	"exclude": [
 		"src/test.ts",
