--- a/.github/workflows/openvidu-components-angular-tests.yml
+++ b/.github/workflows/openvidu-components-angular-tests.yml
@@ -157,7 +157,7 @@ jobs:
   e2e_directives:
     needs: test_setup
     name: API Directives Tests
-    runs-on: ubuntu-latest
+    runs-on: ov-actions-runner
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
@@ -223,7 +223,7 @@ jobs:
   e2e_events:
     needs: test_setup
     name: Events E2E
-    runs-on: ubuntu-latest
+    runs-on: ov-actions-runner
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
