openvidu-testapp: updated all dependencies

--- a/openvidu-testapp/package.json
+++ b/openvidu-testapp/package.json
@@ -11,45 +11,45 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^19.1.6",
+    "@angular/animations": "^19.2.12",
     "@angular/cdk": "^19.1.4",
-    "@angular/common": "^19.1.6",
-    "@angular/compiler": "^19.1.6",
-    "@angular/core": "^19.1.6",
-    "@angular/forms": "^19.1.6",
-    "@angular/material": "^19.1.4",
-    "@angular/platform-browser": "^19.1.6",
-    "@angular/platform-browser-dynamic": "^19.1.6",
-    "@angular/router": "^19.1.6",
-    "@livekit/protocol": "1.33.0",
+    "@angular/common": "^19.2.12",
+    "@angular/compiler": "^19.2.12",
+    "@angular/core": "^19.2.12",
+    "@angular/forms": "^19.2.12",
+    "@angular/material": "^19.2.17",
+    "@angular/platform-browser": "^19.2.12",
+    "@angular/platform-browser-dynamic": "^19.2.12",
+    "@angular/router": "^19.2.12",
+    "@livekit/protocol": "^1.38.0",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.1",
     "json-stringify-safe": "5.0.1",
-    "livekit-client": "2.9.3",
-    "livekit-server-sdk": "^2.10.1",
+    "livekit-client": "^2.13.1",
+    "livekit-server-sdk": "^2.13.0",
     "lodash": "^4.17.21",
-    "rxjs": "~7.8.1",
+    "rxjs": "~7.8.2",
     "stream-browserify": "^3.0.0",
     "tslib": "^2.8.1",
     "util": "^0.12.5",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-builders/custom-webpack": "^19.0.0",
-    "@angular-devkit/build-angular": "^19.1.7",
-    "@angular/cli": "~19.1.7",
-    "@angular/compiler-cli": "^19.1.6",
+    "@angular-builders/custom-webpack": "^19.0.1",
+    "@angular-devkit/build-angular": "^19.2.13",
+    "@angular/cli": "~19.2.13",
+    "@angular/compiler-cli": "^19.2.12",
     "@types/events": "^3.0.3",
-    "@types/jasmine": "~5.1.6",
+    "@types/jasmine": "~5.1.8",
     "@types/json-stringify-safe": "^5.0.3",
-    "@types/lodash": "^4.17.15",
-    "@types/node": "^22.13.4",
-    "jasmine-core": "~5.6.0",
+    "@types/lodash": "^4.17.17",
+    "@types/node": "^22.15.21",
+    "jasmine-core": "~5.7.1",
     "karma": "~6.4.4",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.1",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "5.7.3"
+    "typescript": "5.8.3"
   }
 }
