ci: update workflow to use OpenVidu action for local deployment setup

--- a/.github/workflows/openvidu-components-angular-tests.yml
+++ b/.github/workflows/openvidu-components-angular-tests.yml
@@ -65,7 +65,8 @@ jobs:
       - name: Run Chrome
         run: docker run --network=host -d -p 4444:4444 selenium/standalone-chrome:127.0
       - name: Run openvidu-local-deployment
-        uses: ./.github/actions/setup-local-deployment
+        uses: OpenVidu/actions/start-openvidu-local-deployment@main
+
       - name: Setup OpenVidu Call Backend
         uses: ./.github/actions/setup-openvidu-call-backend
       - name: Install dependencies
